formulario dinamico Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div>
-  <h2>Job Application for Heroes</h2>
-  <app-dinamic-form [questions]="questions$ | async"></app-dinamic-form>
+<div class="app-wrapper">
+  <div class="app-container">
+    <h2>FORMULARIO DINAMICO</h2>
+    <app-dinamic-form [questions]="questions$ | async"></app-dinamic-form>
+  </div>
 </div>
