--- a/src/app/dinamic-form-question/dinamic-form-question.component.html
+++ b/src/app/dinamic-form-question/dinamic-form-question.component.html
@@ -1,16 +1,31 @@
-<div [formGroup]="form">
-    <label [attr.for]="question.key">{{question.label}}</label>
+    <div [formGroup]="form" class="form-group">
+        <label [attr.for]="question.key" class="form-label">
+            {{ question.label }}
+        </label>
 
-    <div [ngSwitch]="question.controlType">
+        <div [ngSwitch]="question.controlType">
+            <input *ngSwitchCase="'textbox'" 
+                [formControlName]="question.key"
+                [id]="question.key" 
+                [type]="question.type"
+                [min]="question.type === 'Date' || question.type === 'date' ? today : null"
+                class="form-input"
+                (keypress)="solo_letras($event)">
 
-    <input *ngSwitchCase="'textbox'" [formControlName]="question.key"
-            [id]="question.key" [type]="question.type">
 
-    <!-- <select [id]="question.key" *ngSwitchCase="'dropdown'" [formControlName]="question.key">
-        <option *ngFor="let opt of question.options" [value]="opt.key">{{opt.value}}</option>
-    </select> -->
-
+            <div *ngSwitchCase="'radio'">
+                <div *ngFor="let option of question.options">
+                    <label>
+                        <input type="radio" 
+                            [formControlName]="question.key" 
+                            [value]="option.key">
+                        {{ option.value }}
+                    </label>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div *ngIf="!isValid" class="error-message">
+        {{ question.label }} es obligatorio.
     </div>
 
-    <div class="errorMessage" *ngIf="!isValid">{{question.label}} is required</div>
-</div>
