--- a/src/app/dinamic-form/dinamic-form.component.html
+++ b/src/app/dinamic-form/dinamic-form.component.html
@@ -1,17 +1,13 @@
+<div class="container">
+    <form (ngSubmit)="onSubmit()" [formGroup]="form">
 
-<div>
-<form (ngSubmit)="onSubmit()" [formGroup]="form">
+        <div *ngFor="let question of questions" class="form-rows">
+            <app-dinamic-form-question [question]="question" [form]="form"></app-dinamic-form-question>
+        </div>
 
-    <div *ngFor="let question of questions" class="form-row">
-    <!-- <app-question [question]="question" [form]="form"></app-question> -->
-    <app-dinamic-form-question [question]="question" [form]="form"></app-dinamic-form-question>
-    </div>
-
-    <div class="form-row">
-    <button type="submit" [disabled]="!form.valid">Save</button>
-    </div>
-</form>
-
-<!-- <div *ngIf="payLoad" class="form-row">
-    <strong>Saved the following values</strong><br>{{payLoad}} -->
+        <div class="form-row">
+            <button type="submit" [disabled]="!form.valid">Guardar</button>
+            <button type="button" (click)="onReset()" class="clear-btn">Limpiar</button>
+        </div>
+    </form>
 </div>
