Prueba de Copilot

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,6 @@
     <app-dinamic-form [questions]="questions$ | async"></app-dinamic-form>
   </div>
 </div>
+
+<!-- Notifications container (top-right) -->
+<app-notifications></app-notifications>
